# kptc-origin

./: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.in  configure.in.in  kptc.kdevprj  kptc.lsm  subdirs
doc/: Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
kptc/: Makefile.am  Makefile.in  commanddialog.cpp  commanddialog.h  configdata.cpp  configdata.h  configdialog.cpp  configdialog.h  configmachine.cpp  configmachine.h  cqdialog.cpp  cqdialog.h  cwspeedwidget.cpp  cwspeedwidget.h  fixtextpicker.cpp  fixtextpicker.h  kptc.cpp  kptc.desktop  kptc.h  main.cpp  mini-kptc.xpm  modebuttons.cpp  modebuttons.h  modecommander.cpp  modecommander.h  modem.cpp  modem.h  mylineedit.cpp  mylineedit.h  mytermout.cpp  mytermout.h  qtmultilineedit.cpp  qtmultilineedit.h  qttableview.cpp  qttableview.h  rttyspeedwidget.cpp  rttyspeedwidget.h  statusinfo.cpp  statusinfo.h  update.cpp  (+3 more)
po/: Makefile.in
